--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.5.3",
     "clipboard-copy": "^3.1.0",
     "eslint-plugin-sonarjs": "^0.11.0",
+    "gh-pages": "^4.0.0",
     "history": "^4.7.2",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
@@ -25,7 +26,10 @@
     "react-scripts": "5.0.0",
     "websocket-extensions": ">=0.1.4"
   },
+  "homepage": "https://josetoitio.github.io/Aplicativo-de-receitas/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "cy": "cypress run",
     "cy:open": "cypress open",
     "start": "react-scripts start",
